<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dhrystone</string>
    <string name="run_dhrystone">Run</string>
    <string name="num_runs">#Runs:</string>
	<string name="num_threads">CPU:</string>
    <string name="default_num_runs">40000</string>
	<string name="default_num_threads">1</string>
    <string name="abort_dhry">Abort</string>
    <string name="invalid_input">Invalid number of runs</string>
	<string name="backlight_off">Backlight OFF</string>

    <string name="action_clearlog">Clear log</string>
    <string name="action_share">Share log</string>
    <string name="send_to">Share log using&#8230;</string>

    <string name="startup_msg">\nVisit https://github.com/tomari/NDKdhry for sources.\n</string>
</resources>
