<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_runs" />

        <EditText
            android:id="@+id/numRun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:imeOptions="actionGo"
            android:inputType="number"
            android:text="@string/default_num_runs" />

        <CheckBox
            android:id="@+id/backlightCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backlight_off" />
    </LinearLayout>

    <LinearLayout
		android:id="@+id/linearLayout2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/linearLayout1" >
		<TextView
			android:id="@+id/textView8"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/num_threads" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fillViewport="false">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cpusScrollView"
                android:orientation="horizontal">

            </LinearLayout>
        </HorizontalScrollView>

        <Button
			android:id="@+id/button1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="RunButtonClicked"
			android:text="@string/run_dhrystone" />
	</LinearLayout>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/linearLayout2" >

        <TextView
            android:id="@+id/logField"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_marginBottom="51dp"
            android:layout_marginRight="46dp"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:textIsSelectable="true"
            android:typeface="monospace" />
    </ScrollView>

</RelativeLayout>